--- a/Dockerfiles/wordpress/Dockerfile
+++ b/Dockerfiles/wordpress/Dockerfile
@@ -1,10 +1,10 @@
 FROM wordpress:5.0.3-php7.2-apache
 
 ADD ssl.conf /etc/apache2/sites-available/ssl.conf
-ADD entrypoint.sh /opt/entrypoint.sh
+ADD endpoint.sh /opt/endpoint.sh
 
-RUN chmod a+x /opt/entrypoint.sh
-RUN /bin/bash -c "source /opt/entrypoint.sh /etc/apache2/ssl_keys localhost"
+RUN chmod a+x /opt/endpoint.sh
+RUN /bin/bash -c "source /opt/endpoint.sh /etc/apache2/ssl_keys localhost"
 RUN a2enmod ssl
 RUN a2ensite ssl
 
